<resources>
    <string name="app_name">MyMusicApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password (At least 6 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forget_password">Forget Password?</string>
    <string name="hint_forget_password">Don\'t worry we just need your registered email address and it\'s done!</string>
    <string name="go_back">Go Back</string>
    <string name="reset_password">Reset Password</string>
    <string name="search">Search</string>
</resources>